--- a/concluding.tex
+++ b/concluding.tex
@@ -83,7 +83,7 @@ As supplemental material, the Appendix (Chapter~\ref{cha:appendix}) contains
 presenting a simplified prior model that gives interesting insights into the updating step
 for the regression parameters and offers opportunities for inferences based on sets of priors
 (Section~\ref{sec:festschrift});
-%\item ***a short summary of a previous approach to Bayesian linear regression
+%\item a short summary of a previous approach to Bayesian linear regression
 %with sets of priors which was published by \textcite{Walter2007a}, in Section~\ref{sec:isipta07};
 \item some first technical results characterising a new prior parameter set shape,
 described informally in Section~\ref{sec:concluding-outlook} below
@@ -96,9 +96,9 @@ described informally in Section~\ref{sec:concluding-outlook} below
 \label{sec:concluding-discussion}
 
 %discussion of issues in Bayesian inference and discussion on IP methods given in Section~\ref{sec:motivation} %Chapter~\ref{cha:gbi}.
-%****reasons to use IP models:
-%****issues in Bayesian inference: weakly informative priors, \pdc, or in general sensitivity to the prior
-%****realistic modeling of partial information
+% * reasons to use IP models:
+% * issues in Bayesian inference: weakly informative priors, \pdc, or in general sensitivity to the prior
+% * realistic modeling of partial information
 
 As the model overview in Section~\ref{sec:generalmodel} gives already a detailed discussion
 of the imprecise probability models considered in this thesis,%
@@ -165,7 +165,7 @@ it is possible that only a few aspects of the shape are relevant,
 such that elicitation of the entire shape might actually not be necessary.
 Furthermore, the derivation of posterior inferences from
 such complex prior shapes can be difficult as well.
-%discussion of shapes as at the end of Section~\ref{sec:pdc-sensitivity} and \ref{sec:ibbm-resume}***
+%discussion of shapes as at the end of Section~\ref{sec:pdc-sensitivity} and \ref{sec:ibbm-resume}
 
 %These considerations of parameter set shapes notwithstanding, %Nevertheless, 
 %For all these models, whether the shape of $\PZ$ turns more to the simple or to the complex end, 
@@ -174,10 +174,10 @@ models based on sets of canonical conjugate priors form, in our view,
 a `sweet spot' in the realm of (imprecise) statistical models,
 by allowing a sophisticated model behaviour
 combined with easy elicitation and computation.
-%More verbosely***,
+%More verbosely ,
 In particular,
 these models are distinguished by the following characteristics:
-%This is ***backed / underlined*** by the following points: 
+%This is backed / underlined by the following points: 
 
 \begin{itemize}
 \item They are relatively easy to elicit:
@@ -209,7 +209,7 @@ from Section~\ref{sec:commoncause}, where we argued for an interval-valued $\nz$
 at the end of Section~\ref{sec:fixedlearningparameter},
 and demonstrated the merits of such a parameter shape for this specific situation of \pdc\
 in Section~\ref{sec:intervallearningparameter}.}
-%***example in Section~\ref{sec:commoncause}: special case of \pdc\ (zero counts),
+% example in Section~\ref{sec:commoncause}: special case of \pdc\ (zero counts),
 constitutes a sensible compromise between model complexity and inference properties.
 \end{itemize}
 
@@ -242,7 +242,7 @@ However, it seems equally reasonable to choose %$\yzu(\nzl) > \yzu(\nzu)$,
 a shorter interval for $\yz$ at $\nzu$ than at $\nzl$,
 by the considerations described at the beginning of Section~\ref{sec:othershapes},
 involving a thought experiment, or `pre-posterior thinking':
-%***anteater****
+% ---- anteater ---- 
 If we designate bounds for $\yn$ constant in $\nn$ and a range of $\nn$ values
 %where the corresponding posterior parameter set $\PN$
 to express what we want to learn from certain hypothetical data,
@@ -267,7 +267,7 @@ with the aim to generate near-noninformative prior sets $\MZ$.}
 (A suggestion for another more sophisticated shape of $\PZ$,
 with the aim to allow for extra precision if prior and data coincide especially well,
 is discussed in the outlook below.)
-%***short note on eggplant shapes in talk? (preliminary results)
+% short note on eggplant shapes in talk? (preliminary results)
 
 % study by krautenbacher shows that elicitation of $\PZ$ can be difficult,
 % compares with \textcite{2005:whitcomb}, similar results, see Section~\ref{sec:alternatives}
@@ -343,7 +343,7 @@ an uninformative and an informative model,%
 While the cautious model tries to use only a minimal amount of information, %presuppose at least as possible**,
 the bold model goes for more daring assumptions.}
 with individual levels of precision induced by different choices of $\nz$. 
-Inference intervals based on these two models are then combined %into a definite*** inference interval
+Inference intervals based on these two models are then combined %into a definite inference interval
 using an imprecise weight, forming the actual inference interval.
 
 This model of \emph{weighted inference} is a very general approach,
@@ -381,11 +381,11 @@ where we spoke of \emph{strong prior-data agreement}.}
 \section{Outlook}
 \label{sec:concluding-outlook}
 
-%***avenues for further research***
+% avenues for further research
 %Here, we come back to the ideas 
 Here, we will summarise central ideas discussed in several concluding sections
 (\ref{sec:6-gw-071216}, \ref{sec:insights}, \ref{sec:discussion-festschrift}),
-carrying some of them further, presenting %giving an ***overview of** %in order to describe 
+carrying some of them further, presenting 
 opportunities for applications and potential avenues for further research.
 In particular, an idea for modelling of \emph{strong prior-data agreement} will be explained in more detail.
 
@@ -395,7 +395,7 @@ currently existing models in the framework from Section~\ref{sec:basicsetting}.
 Then, we will sketch some ideas to extend the presently available models,
 including a discussion of a novel parameter set shape that allows to cater for
 \emph{strong prior-data agreement} (see the technical details in Section~\ref{sec:boatshape}).
-These further developments still follow the lines %are **still a part of the framework***
+These further developments still follow the lines %are still a part of the framework
 of generalised Bayesian inference using sets of priors as described in Sections~\ref{sec:gbr} and \ref{sec:imprecisebayes}
 that ensure coherence of inferences by updating the set of priors via the Generalised Bayes' Rule.
 In the last part of this outlook, we will look instead beyond this framework
@@ -404,8 +404,8 @@ about updating and learning in the context of statistical inference.
 
 \medskip
 
-%***\textbf{first: model as is, study and use for\dots }
-%***comparison with other approaches in Section~\ref{sec:alternatives}, especially drc***
+% \textbf{first: model as is, study and use for\dots }
+% comparison with other approaches in Section~\ref{sec:alternatives}, especially drc
 As seen in Section~\ref{sec:alternatives}, there are a number of alternative models
 for statistical inference using sets of priors.
 Besides the study by \textcite{2011:krautenbacher},
@@ -415,15 +415,15 @@ with those based on the alternative models named in Section~\ref{sec:alternative
 in detail have yet been conducted to our knowledge.
 Such studies could be rewarding
 by giving more detailed insight into strengths and weaknesses of the respective models.
-%***more studies for comparisons with the model from \ref{sec:generalmodel} to be done,
-%e.g., with hierarchical models (Section~\ref{sec:hierarchical})?***
+%more studies for comparisons with the model from \ref{sec:generalmodel} to be done,
+%e.g., with hierarchical models (Section~\ref{sec:hierarchical})?
 Further insight could also be gained from a comparison to the hierarchical model
 developed by \textcite[see Section~\ref{sec:hierarchical}]{2008:cattaneo}.
 
 There are of course many opportunities for application of the models described in this thesis,
 and we will mention just two interesting general cases here.
 
-%***use regression framework from Section~\ref{sec:cccp} in situations prone to \pdc.
+% use regression framework from Section~\ref{sec:cccp} in situations prone to \pdc.
 The canonical conjugate prior for Bayesian linear regression constructed in Section~\ref{sec:cccp}
 could be used for an imprecise regression analysis based on sets of priors.
 Although being probably the most important concept in modern statistical inference,
@@ -439,7 +439,7 @@ With priors based on $\PZ$ of type~(\ref{enum:rectangular}),
 the model could offer favourable inference properties in situations that are prone to \pdc\
 (see the discussion in Section~\ref{sec:discussion-festschrift}).
 
-%***model could be vey useful in statistical surveillance, cite IESS:surveillance?***,
+% model could be vey useful in statistical surveillance, cite IESS:surveillance?,
 Another potentially fruitful area of application is models for \emph{statistical surveillance}
 \parencite[for a brief overview see, e.g.,][]{2011:IESS-surveillance}.
 Here, the aim is to monitor a data-generating process over time
@@ -462,7 +462,7 @@ but also other set shapes could prove useful here.
 
 \medskip
 
-%***\textbf{then: extend the model, but keep GBR framework}
+% \textbf{then: extend the model, but keep GBR framework}
 Now, we will present some ideas for further development within the framework
 described in Section~\ref{sec:basicsetting}, i.e.,
 for models based on sets of canonical conjugate priors
@@ -484,8 +484,8 @@ not idealising the data in a similar way as we ceased to idealise prior informat
 
 %new weakly informative prior models / prior near-ignorance models by Mangili \& Benavoli (ISIPTA'13) better in 3.2??
 
-%***study multidimensional stuff in more detail: definition of pdc now dimension-wise, other shapes?
-%***in general, how to elicit more complex shapes, especially difficult for multidimensional $\yz$
+% study multidimensional stuff in more detail: definition of pdc now dimension-wise, other shapes?
+% in general, how to elicit more complex shapes, especially difficult for multidimensional $\yz$
 Another important area for further study concerns the case of multidimensional $\yz$.
 Elicitation of such high-dimensional parameter sets $\PZ$ poses interesting challenges.
 The simple, `hyper-rectangle' set suggested in Section~\ref{sec:imprecise-alpha}, Equation~\eqref{eq:hyperparams:boxmodel},
@@ -502,7 +502,7 @@ Also, for $\PZ$ as in Equation~\eqref{eq:hyperparams:boxmodel},
 (see also Example~\ref{ex:jstp-8}, Figure~\ref{fig:idm-nvar-nopdc}).
 It is an open question if other prior set shapes entail
 different consequences with respect to multidimensional \pdc\ sensitivity. 
-%***take only pair of $\nz$ values? behavioural implications?
+% take only pair of $\nz$ values? behavioural implications?
 A possible approach to simplify elicitation in high-dimensional cases
 (that could also be useful for lower-dimensional $\yz$) is to not consider
 $\NZ = [\nzl, \nzu]$, but $\NZ = \{\nzl, \nzu\}$,
@@ -512,7 +512,7 @@ probably more feasible.
 However, similar to the discussion of the rectangular shape in Section~\ref{sec:concluding-discussion} above,
 the behavioural implications of such a choice of parameter set would have to be studied in detail.
 
-%***boatshape stuff: cater also for strong prior-data agreement***
+% boatshape stuff: cater also for strong prior-data agreement
 Before we will discuss more general arguments about learning and updating,
 we will now describe a novel idea for generating parameter prior sets $\PZ$
 that, in addition to \pdc\ sensitivity, allow to mirror \emph{strong prior-data agreement}
@@ -595,10 +595,10 @@ in the context of statistical inference using sets of priors.
 
 %elaborate thoughts in Section~\ref{sec:updating} again,
 %see also comments at end of Section~\ref{sec:6-gw-071216},
-%***We discussed some general critique on the Generalised Bayes' Rule
+%We discussed some general critique on the Generalised Bayes' Rule
 %and inferences based on it in Section~\ref{sec:updating}
 %and at the end of Section~\ref{sec:6-gw-071216}???.
-%***subsuming? ***We will thus pick out only some aspects here, discussing them in a larger context.***
+%subsuming? We will thus pick out only some aspects here, discussing them in a larger context.
 
 As we wrote in Section~\ref{sec:6-gw-071216},
 it should well be remembered that the models considered in this thesis
@@ -613,7 +613,7 @@ that consider alternative learning rules.}
 
 However, we argue that some aspects of inferences based on the Generalised Bayes' Rule that are critizised
 in the literature
-%\footnote{See in particular Section~\ref{sec:updating}.***}
+%\footnote{See in particular Section~\ref{sec:updating}.}
 can be confronted, or at least mitigated, by a careful choice of the sets of priors.
 
 We consider this, to some extent, to be the case for the critique that 
