last comments Thomas, and proof of updated mixture in 3.1.1.

--- a/concluding.tex
+++ b/concluding.tex
@@ -474,11 +474,12 @@ the models discussed in this thesis rely on a precise sampling model,
 %from \textcite[4.4]{itip-statinf}
 but the generalised Bayesian inference framework also allows for imprecise sampling models
 \parencite[see, in particular,][\S 8.5]{1991:walley},
-also discussed under the notion of \emph{likelihood robustness} \parencite[e.g.,][]{2000:shyamalkumar} in the robust Bayesian framework.
-This could be done, as mentioned in Section~\ref{sec:insights},
-in an analogous way to \textcite{2007:utkinaugustin} and \textcite{2009:Troffaes:Coolen},
-allowing to consider coarse or imprecise data adequately in the model,
-not idealising the data in a similar way as we ceased to idealise prior information by allowing for imprecision.
+also discussed under the notion of \emph{likelihood robustness} \parencite[e.g.,][]{2000:shyamalkumar} in the robust Bayesian framework,
+not idealising the the sampling model in the same way as we ceased to idealise the prior model.
+%This could be done, as mentioned in Section~\ref{sec:insights}, % !!! coarse Data, nicht imprecise sampling model !!!
+%in an analogous way to \textcite{2007:utkinaugustin} and \textcite{2009:Troffaes:Coolen},
+%allowing to consider coarse or imprecise data adequately in the model,
+%not idealising the data in a similar way as we ceased to idealise prior information by allowing for imprecision.
 %The detailed consequences of this development remain to be studied.
 %questions on (data) robustness of IP models, see isipta13 paper by Marco
 
