again proof of updated mixture in 3.1.1.

--- a/setsofconjugatepriors.tex
+++ b/setsofconjugatepriors.tex
@@ -130,7 +130,7 @@ is given by the set of all mixture distributions based on $p(\vartheta\mid\nz_1,
 where $\alpha$ varies in $[0, 1]$.
 As for any $\alpha \in [0,1]$, the corresponding $\alpha^*$ is again in $[0,1]$,
 and it holds that $\{\alpha^* \mid \alpha \in [0,1]\} = [0,1]$,
-The convex hull of $p(\vartheta\mid\nn_1,\yn_1)$ and $p(\vartheta\mid\nn_2,\yn_2)$
+the convex hull of $p(\vartheta\mid\nn_1,\yn_1)$ and $p(\vartheta\mid\nn_2,\yn_2)$
 is indeed equivalent to the set of updated mixtures $p_m(\vartheta\mid \nz_1,\yz_1, \nz_2,\yz_2, \alpha, \x)$
 for $\alpha \in [0,1]$.
 
